# gendiff

./: .travis.yml  Makefile  README.md  pyproject.toml  setup.cfg
gendiff/: __init__.py  cli.py  constants.py  converter.py  diff.py  file_loader.py  files.py  generate_diff.py  values.py
gendiff/format/: __init__.py  default.py  json.py  plain.py
gendiff/formatters/: converter.py  json_format.py  json_like_format.py  plain_format.py
gendiff/scripts/: __init__.py  gendiff.py
tests/: conftest.py  test_cli.py  test_converter.py  test_default.py  test_diff.py  test_file_loader.py  test_gendiff.py  test_generate_diff.py  test_json.py  test_json_format.py  test_json_like_format.py  test_plain.py  test_plain_format.py  test_values.py
tests/fixtures/: diff.json  diff.txt  diff_json.txt  nested_diff.txt  simple_diff.txt  simple_output_json.json
